# OtusCPP

./: .gitignore  .travis.yml  CMakeLists.txt
bintray/: description.json  description.json.in
ci/: travis_prepare.sh
